# mediafire-dl-cli

./: .gitignore  README.md  pyproject.toml
mediafire_dl_cli/: __init__.py  __main__.py  downloader.py  exceptions.py  scraper.py  utils.py
tests/: test_scraper.py
